--- a/calculadora/src/main/java/calculadora.form
+++ b/calculadora/src/main/java/calculadora.form
@@ -49,10 +49,11 @@
                       <Component id="casilla" min="-2" pref="404" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jButton4" pref="72" max="32767" attributes="0"/>
+                              <Component id="jButton4" max="32767" attributes="0"/>
                               <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                               <Component id="jButton9" alignment="0" max="32767" attributes="0"/>
                               <Component id="jButton10" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jButton23" pref="72" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -122,13 +123,17 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="casilla" min="-2" pref="37" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton15" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
-                          <Component id="jButton11" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
-                          <Component id="jButton18" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jButton15" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                              <Component id="jButton11" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                              <Component id="jButton18" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jButton22" max="32767" attributes="0"/>
+                      <Component id="jButton23" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -138,7 +143,7 @@
                       <Component id="jButton14" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="jButton20" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jButton5" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="jButton4" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
@@ -413,6 +418,17 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton19ActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton23">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="IVA"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton23ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
